@@ -17,6 +17,7 @@
 package org.gradle.smoketests
 
 import org.apache.commons.io.FileUtils
+import org.gradle.api.JavaVersion
 import org.gradle.initialization.StartParameterBuildOptions.ConfigurationCacheMaxProblemsOption
 import org.gradle.initialization.StartParameterBuildOptions.ConfigurationCacheOption
 import org.gradle.initialization.StartParameterBuildOptions.ConfigurationCacheProblemsOption
@@ -32,12 +33,10 @@ import org.gradle.internal.featurelifecycle.LoggingDeprecatedFeatureHandler
 import org.gradle.internal.operations.trace.BuildOperationTrace
 import org.gradle.test.fixtures.dsl.GradleDsl
 import org.gradle.test.fixtures.file.TestFile
-import org.gradle.testkit.runner.BuildResult
 import org.gradle.testkit.runner.GradleRunner
 import org.gradle.testkit.runner.internal.DefaultGradleRunner
-import org.junit.Rule
-import org.junit.rules.TemporaryFolder
 import spock.lang.Specification
+import spock.lang.TempDir
 
 import static org.gradle.integtests.fixtures.RepoScriptBlockUtil.createMirrorInitScript
 import static org.gradle.integtests.fixtures.RepoScriptBlockUtil.gradlePluginRepositoryMirrorUrl
@@ -47,11 +46,10 @@ import static org.gradle.test.fixtures.server.http.MavenHttpPluginRepository.PLU
 abstract class AbstractSmokeTest extends Specification {
 
     protected static final AndroidGradlePluginVersions AGP_VERSIONS = new AndroidGradlePluginVersions()
+    protected static final String AGP_NO_CC_ITERATION_MATCHER = ".*agp=4\\..*"
+
     protected static final KotlinGradlePluginVersions KOTLIN_VERSIONS = new KotlinGradlePluginVersions()
-    protected static final String AGP_4_0_ITERATION_MATCHER = ".*agp=4\\.0\\..*"
-    protected static final String AGP_4_1_ITERATION_MATCHER = ".*agp=4\\.1\\..*"
-    protected static final String AGP_4_2_ITERATION_MATCHER = ".*agp=4\\.2\\..*"
-    protected static final String AGP_7_ITERATION_MATCHER = ".*agp=7\\..*"
+    protected static final String KGP_NO_CC_ITERATION_MATCHER = ".*(kotlin=1\\.3\\.|kotlin=1\\.4\\.[01]).*"
 
     static class TestedVersions {
         /**
@@ -60,43 +58,48 @@ abstract class AbstractSmokeTest extends Specification {
          */
 
         // https://plugins.gradle.org/plugin/nebula.dependency-recommender
-        static nebulaDependencyRecommender = "9.1.1"
+        static nebulaDependencyRecommender = "11.0.0"
 
         // https://plugins.gradle.org/plugin/nebula.plugin-plugin
-        static nebulaPluginPlugin = "15.3.0"
+        static nebulaPluginPlugin = "16.0.1"
 
         // https://plugins.gradle.org/plugin/nebula.lint
-        static nebulaLint = "16.15.9"
+        static nebulaLint = "17.2.3"
+
+        // https://plugins.gradle.org/plugin/org.jetbrains.gradle.plugin.idea-ext
+        static ideaExt = "1.1"
 
         // https://plugins.gradle.org/plugin/nebula.dependency-lock
-        static nebulaDependencyLock = Versions.of("8.8.0", "9.4.1", "10.1.0", "11.1.0")
+        // TODO: Re-add "8.8.x", "9.4.x" and "10.1.x" if fixed:
+        //   https://github.com/nebula-plugins/gradle-dependency-lock-plugin/issues/215
+        static nebulaDependencyLock = Versions.of("12.1.0")
 
         // https://plugins.gradle.org/plugin/nebula.resolution-rules
-        static nebulaResolutionRules = "7.8.0"
+        static nebulaResolutionRules = "9.0.0"
 
         // https://plugins.gradle.org/plugin/com.github.johnrengelman.shadow
-        static shadow = Versions.of("4.0.4", "6.0.0", "6.1.0", "7.0.0")
+        static shadow = Versions.of("4.0.4", "6.0.0", "6.1.0", "7.0.0", "7.1.0")
 
         // https://github.com/asciidoctor/asciidoctor-gradle-plugin/releases
-        static asciidoctor = Versions.of("3.3.1")
+        static asciidoctor = Versions.of("3.3.2")
 
         // https://plugins.gradle.org/plugin/com.github.spotbugs
-        static spotbugs = "4.6.0"
+        static spotbugs = "5.0.6"
 
         // https://plugins.gradle.org/plugin/com.bmuschko.docker-java-application
-        static docker = "6.6.1"
+        static docker = "7.1.0"
 
         // https://plugins.gradle.org/plugin/com.bmuschko.tomcat
-        static tomcat = "2.5"
+        static tomcat = "2.7.0"
 
         // https://plugins.gradle.org/plugin/io.spring.dependency-management
-        static springDependencyManagement = "1.0.10.RELEASE"
+        static springDependencyManagement = "1.0.11.RELEASE"
 
         // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-gradle-plugin
-        static springBoot = "2.4.0"
+        static springBoot = "2.5.5"
 
         // https://developer.android.com/studio/releases/build-tools
-        static androidTools = "29.0.3"
+        static androidTools = "30.0.2"
         // https://developer.android.com/studio/releases/gradle-plugin
         static androidGradle = Versions.of(*AGP_VERSIONS.getLatestsFromMinorPlusNightly("4.0"))
 
@@ -107,64 +110,67 @@ abstract class AbstractSmokeTest extends Specification {
         })
 
         // https://plugins.gradle.org/plugin/org.gretty
-        static gretty = "3.0.4"
+        static gretty = [
+            [version: "3.0.7", servletContainer: "jetty9.4", javaMinVersion: JavaVersion.VERSION_1_8],
+            [version: "4.0.0", servletContainer: "jetty11", javaMinVersion: JavaVersion.VERSION_11]
+        ]
 
         // https://plugins.gradle.org/plugin/org.ajoberstar.grgit
         static grgit = "4.1.0"
 
         // https://plugins.gradle.org/plugin/com.github.ben-manes.versions
-        static gradleVersions = "0.36.0"
+        static gradleVersions = "0.39.0"
 
         // https://plugins.gradle.org/plugin/org.gradle.playframework
-        static playframework = "0.11"
+        static playframework = "0.12"
 
         // https://plugins.gradle.org/plugin/net.ltgt.errorprone
-        static errorProne = "1.3.0"
+        static errorProne = "2.0.2"
 
         // https://plugins.gradle.org/plugin/com.google.protobuf
-        static protobufPlugin = "0.8.14"
-        static protobufTools = "3.13.0"
+        static protobufPlugin = "0.8.18"
+        static protobufTools = "3.17.1"
 
         // https://plugins.gradle.org/plugin/org.gradle.test-retry
-        static testRetryPlugin = "1.1.9"
+        static testRetryPlugin = "1.3.1"
 
         // https://plugins.gradle.org/plugin/com.jfrog.artifactory
-        static artifactoryPlugin = "4.18.0"
+        static artifactoryPlugin = "4.27.1"
         static artifactoryRepoOSSVersion = "6.16.0"
 
         // https://plugins.gradle.org/plugin/io.freefair.aspectj
-        static aspectj = "5.3.3.3"
+        static aspectj = "6.4.1"
 
         // https://plugins.gradle.org/plugin/de.undercouch.download
-        static undercouchDownload = Versions.of("4.1.1")
+        static undercouchDownload = Versions.of("4.1.2")
 
-        // https://github.com/micronaut-projects/micronaut-gradle-plugin
-        static micronaut = Versions.of("1.3.2")
+        // https://github.com/micronaut-projects/micronaut-gradle-plugin/releases
+        static micronaut = Versions.of("2.0.6")
 
         // https://plugins.gradle.org/plugin/com.gorylenko.gradle-git-properties
-        static gradleGitProperties = Versions.of("2.2.4")
+        static gradleGitProperties = Versions.of("2.3.1")
 
         // https://plugins.gradle.org/plugin/org.flywaydb.flyway
-        static flyway = Versions.of("7.5.1")
+        static flyway = Versions.of("8.0.0")
 
         // https://plugins.gradle.org/plugin/net.ltgt.apt
         static apt = Versions.of("0.21")
 
         // https://plugins.gradle.org/plugin/io.gitlab.arturbosch.detekt
-        static detekt = Versions.of("1.15.0")
+        static detekt = Versions.of("1.19.0")
 
         // https://plugins.gradle.org/plugin/com.diffplug.spotless
-        static spotless = Versions.of("5.9.0")
+        static spotless = Versions.of("6.3.0")
 
         // https://plugins.gradle.org/plugin/com.google.cloud.tools.jib
-        static jib = Versions.of("2.7.1")
+        static jib = Versions.of("3.1.4")
 
         // https://plugins.gradle.org/plugin/io.freefair.lombok
-        static lombok = Versions.of("5.3.0")
+        static lombok = Versions.of("6.2.0")
 
         // https://plugins.gradle.org/plugin/org.jetbrains.kotlin.plugin.allopen
         // https://plugins.gradle.org/plugin/org.jetbrains.kotlin.plugin.spring
-        static kotlinPlugins = Versions.of("1.4.21-2", "1.4.31")
+        static kotlinPlugins = Versions.of("1.4.21-2", "1.4.31", "1.5.31", "1.6.0", "1.6.10", "1.6.21", "1.7.0", "1.7.10", "1.7.20-Beta")
 
         // https://plugins.gradle.org/plugin/com.moowork.grunt
         // https://plugins.gradle.org/plugin/com.moowork.gulp
@@ -172,9 +178,19 @@ abstract class AbstractSmokeTest extends Specification {
         static node = Versions.of("1.3.1")
 
         // https://plugins.gradle.org/plugin/org.jlleitschuh.gradle.ktlint
-        static ktlint = Versions.of("9.4.1")
+        static ktlint = Versions.of("10.3.0")
 
-        static newNode = Versions.of("3.0.1")
+        // https://plugins.gradle.org/plugin/com.github.node-gradle.node
+        static newNode = Versions.of("3.1.1")
+
+        // https://github.com/davidmc24/gradle-avro-plugin
+        static avro = Versions.of("1.3.0")
+
+        // https://plugins.gradle.org/plugin/io.spring.nohttp
+        static nohttp = Versions.of("0.0.10")
+
+        // https://plugins.gradle.org/plugin/org.jenkins-ci.jpi
+        static jenkinsJpi = Versions.of("0.43.0")
     }
 
     static class Versions implements Iterable<String> {
@@ -186,6 +202,15 @@ abstract class AbstractSmokeTest extends Specification {
 
         String latest() {
             versions.last()
+        }
+
+        String latestStable() {
+            versions.reverse().find { version ->
+                !version.containsIgnoreCase("rc") &&
+                !version.containsIgnoreCase("beta") &&
+                !version.containsIgnoreCase("alpha") &&
+                !version.containsIgnoreCase("milestone")
+            }
         }
 
         String latestStartsWith(String prefix) {
@@ -204,15 +229,15 @@ abstract class AbstractSmokeTest extends Specification {
 
     private static final String INIT_SCRIPT_LOCATION = "org.gradle.smoketests.init.script"
 
-    @Rule
-    final TemporaryFolder testProjectDir = new TemporaryFolder()
+    @TempDir
+    File testProjectDir
     File buildFile
 
     File settingsFile
 
     def setup() {
-        buildFile = new File(testProjectDir.root, defaultBuildFileName)
-        settingsFile = new File(testProjectDir.root, "settings.gradle")
+        buildFile = new File(testProjectDir, defaultBuildFileName)
+        settingsFile = new File(testProjectDir, "settings.gradle")
     }
 
     protected String getDefaultBuildFileName() {
@@ -220,27 +245,28 @@ abstract class AbstractSmokeTest extends Specification {
     }
 
     void withKotlinBuildFile() {
-        buildFile = new File(testProjectDir.root, "${getDefaultBuildFileName()}.kts")
+        buildFile = new File(testProjectDir, "${getDefaultBuildFileName()}.kts")
     }
 
     TestFile file(String filename) {
-        def file = new TestFile(testProjectDir.root, filename)
+        def file = new TestFile(testProjectDir, filename)
         def parentDir = file.getParentFile()
         assert parentDir.isDirectory() || parentDir.mkdirs()
 
         file
     }
 
-    GradleRunner runner(String... tasks) {
-        GradleRunner gradleRunner = GradleRunner.create()
+    SmokeTestGradleRunner runner(String... tasks) {
+        def gradleRunner = GradleRunner.create()
             .withGradleInstallation(IntegrationTestBuildContext.INSTANCE.gradleHomeDir)
             .withTestKitDir(IntegrationTestBuildContext.INSTANCE.gradleUserHomeDir)
-            .withProjectDir(testProjectDir.root)
+            .withProjectDir(testProjectDir)
             .forwardOutput()
             .withArguments(
                 tasks.toList() + outputParameters() + repoMirrorParameters() + configurationCacheParameters()
             ) as DefaultGradleRunner
         gradleRunner.withJvmArguments(["-Xmx8g", "-XX:MaxMetaspaceSize=1024m", "-XX:+HeapDumpOnOutOfMemoryError"])
+        return new SmokeTestGradleRunner(gradleRunner)
     }
 
     private List<String> configurationCacheParameters() {
@@ -306,14 +332,17 @@ abstract class AbstractSmokeTest extends Specification {
 
     protected void useSample(String sampleDirectory) {
         def smokeTestDirectory = new File(this.getClass().getResource(sampleDirectory).toURI())
-        FileUtils.copyDirectory(smokeTestDirectory, testProjectDir.root)
+        FileUtils.copyDirectory(smokeTestDirectory, testProjectDir)
     }
 
-    protected GradleRunner useAgpVersion(String agpVersion, GradleRunner runner) {
+    protected SmokeTestGradleRunner useAgpVersion(String agpVersion, SmokeTestGradleRunner runner) {
         def extraArgs = [AGP_VERSIONS.OVERRIDE_VERSION_CHECK]
         if (AGP_VERSIONS.isAgpNightly(agpVersion)) {
             def init = AGP_VERSIONS.createAgpNightlyRepositoryInitScript()
             extraArgs += ["-I", init.canonicalPath]
+        }
+        if (agpVersion.startsWith("7.2") && JavaVersion.current().java9Compatible) {
+            runner = runner.withJvmArguments('--add-opens', 'java.logging/java.util.logging=ALL-UNNAMED')
         }
         return runner.withArguments([runner.arguments, extraArgs].flatten())
     }
@@ -342,37 +371,7 @@ abstract class AbstractSmokeTest extends Specification {
         RepoScriptBlockUtil.googleRepository(dsl)
     }
 
-    protected static void expectNoDeprecationWarnings(BuildResult result) {
-        verifyDeprecationWarnings(result, [])
-    }
-
-    protected static void expectDeprecationWarnings(BuildResult result, String... warnings) {
-        if (warnings.length == 0) {
-            throw new IllegalArgumentException("Use expectNoDeprecationWarnings() when no deprecation warnings are to be expected")
-        }
-        verifyDeprecationWarnings(result, warnings as List)
-    }
-
-    private static void verifyDeprecationWarnings(BuildResult result, List<String> remainingWarnings) {
-        def lines = result.output.readLines()
-        int foundDeprecations = 0
-        lines.eachWithIndex { String line, int lineIndex ->
-            if (remainingWarnings.remove(line)) {
-                foundDeprecations++
-                return
-            }
-            assert !containsDeprecationWarning(line), "Found an unexpected deprecation warning on line ${lineIndex + 1}: $line"
-        }
-        assert remainingWarnings.empty, "Expected ${remainingWarnings.size()} deprecation warnings, found ${foundDeprecations} deprecation warnings:\n${remainingWarnings.collect { " - $it" }.join("\n")}"
-    }
-
-    private static boolean containsDeprecationWarning(String line) {
-        line.contains("has been deprecated and is scheduled to be removed in Gradle") ||
-            line.contains("has been deprecated. This is scheduled to be removed in Gradle")
-    }
-
     void copyRemoteProject(String remoteProject, File targetDir) {
         new TestFile(new File("build/$remoteProject")).copyTo(targetDir)
     }
-
 }
